refactor(product-service): resolve inefficient empty string check pmd violations